<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FF000000"
    android:padding="14dp">

    <TextView
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:text="@string/bellecour"
        android:textColor="#FFFFFFFF"
        android:textSize="18sp"
        android:textStyle="bold"
        android:maxLines="1" />

    <!-- Row 1: Metro D -->
    <ImageView
        android:id="@+id/dep1_icon"
        android:layout_width="28dp"
        android:layout_height="18dp"
        android:layout_below="@id/header"
        android:layout_alignParentStart="true"
        android:layout_marginTop="12dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/d"
        android:scaleType="fitCenter" />

    <TextView
        android:id="@+id/dep1_dir"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/header"
        android:layout_toEndOf="@id/dep1_icon"
        android:layout_toStartOf="@+id/dep1_time"
        android:layout_marginTop="12dp"
        android:layout_marginStart="6dp"
        android:text="@string/gare_de_v_nissieux"
        android:textColor="#FFFFFFFF"
        android:textSize="14sp"
        android:maxLines="1" />

    <TextView
        android:id="@+id/dep1_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/header"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="12dp"
        android:text="@string/_3_min"
        android:textColor="#FF22C55E"
        android:textSize="14sp"
        android:textStyle="bold" />

    <!-- Row 2: Metro A -->
    <ImageView
        android:id="@+id/dep2_icon"
        android:layout_width="28dp"
        android:layout_height="18dp"
        android:layout_below="@id/dep1_dir"
        android:layout_alignParentStart="true"
        android:layout_marginTop="6dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/a"
        android:scaleType="fitCenter" />

    <TextView
        android:id="@+id/dep2_dir"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/dep1_dir"
        android:layout_toEndOf="@id/dep2_icon"
        android:layout_toStartOf="@+id/dep2_time"
        android:layout_marginTop="6dp"
        android:layout_marginStart="6dp"
        android:text="@string/perrache"
        android:textColor="#FFFFFFFF"
        android:textSize="14sp"
        android:maxLines="1" />

    <TextView
        android:id="@+id/dep2_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/dep1_time"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="6dp"
        android:text="@string/_8_min"
        android:textColor="#FF22C55E"
        android:textSize="14sp"
        android:textStyle="bold" />

    <!-- Row 3: Tram T1 -->
    <ImageView
        android:id="@+id/dep3_icon"
        android:layout_width="28dp"
        android:layout_height="18dp"
        android:layout_below="@id/dep2_dir"
        android:layout_alignParentStart="true"
        android:layout_marginTop="6dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/t1"
        android:scaleType="fitCenter" />

    <TextView
        android:id="@+id/dep3_dir"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/dep2_dir"
        android:layout_toEndOf="@id/dep3_icon"
        android:layout_toStartOf="@+id/dep3_time"
        android:layout_marginTop="6dp"
        android:layout_marginStart="6dp"
        android:text="@string/iut_feyssine"
        android:textColor="#FFFFFFFF"
        android:textSize="14sp"
        android:maxLines="1" />

    <TextView
        android:id="@+id/dep3_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/dep2_time"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="6dp"
        android:text="@string/_15_min"
        android:textColor="#FF22C55E"
        android:textSize="14sp"
        android:textStyle="bold" />

</RelativeLayout>
