<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FF000000"
    android:padding="14dp">

    <!-- Header with line icon -->
    <ImageView
        android:id="@+id/header_icon"
        android:layout_width="36dp"
        android:layout_height="34dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:contentDescription="@string/todo"
        android:src="@drawable/d"
        android:scaleType="fitCenter" />

    <TextView
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@id/header_icon"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:text="@string/bellecour"
        android:textColor="#FFFFFFFF"
        android:textSize="18sp"
        android:textStyle="bold"
        android:maxLines="1" />

    <!-- Row 1 -->
    <TextView
        android:id="@+id/dep1_dir"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/header_icon"
        android:layout_toStartOf="@+id/dep1_time"
        android:layout_marginTop="10dp"
        android:text="@string/gare_de_v_nissieux"
        android:textColor="#FFFFFFFF"
        android:textSize="14sp"
        android:maxLines="1" />

    <TextView
        android:id="@+id/dep1_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/header_icon"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10dp"
        android:text="@string/_3_min"
        android:textColor="#FF22C55E"
        android:textSize="14sp"
        android:textStyle="bold" />

    <!-- Row 2 -->
    <TextView
        android:id="@+id/dep2_dir"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/dep1_dir"
        android:layout_toStartOf="@+id/dep2_time"
        android:layout_marginTop="6dp"
        android:text="@string/gare_de_v_nissieux"
        android:textColor="#FFFFFFFF"
        android:textSize="14sp"
        android:maxLines="1" />

    <TextView
        android:id="@+id/dep2_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/dep1_time"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="6dp"
        android:text="@string/_8_min"
        android:textColor="#FF22C55E"
        android:textSize="14sp"
        android:textStyle="bold" />

    <!-- Row 3 -->
    <TextView
        android:id="@+id/dep3_dir"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/dep2_dir"
        android:layout_toStartOf="@+id/dep3_time"
        android:layout_marginTop="6dp"
        android:text="@string/gare_de_v_nissieux"
        android:textColor="#FFFFFFFF"
        android:textSize="14sp"
        android:maxLines="1" />

    <TextView
        android:id="@+id/dep3_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/dep2_time"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="6dp"
        android:text="@string/_15_min"
        android:textColor="#FF22C55E"
        android:textSize="14sp"
        android:textStyle="bold" />

</RelativeLayout>
